修改主界面

--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -29,9 +29,11 @@
             <input name="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
             <input value="登录"style="width:100%;" type="submit">
+
             <hr class="hr20" >
+
         </form>
-        <p th:text="${msg}" style="color: red;"></p>
+        <p style="color: red" th:text="${msg}" align="center"></p>
     </div>
 
     <!-- 底部结束 -->
