--- a/src/main/resources/static/css/xadmin.css
+++ b/src/main/resources/static/css/xadmin.css
@@ -88,13 +88,14 @@ body{
 .container{
     width: 100%;
     height: 45px;
-    background-color: #222;
+    background-color: #ccc;
 }
 .container a,.layui-nav .layui-nav-item a{
-    color: #fff;
+    font-size: 14px;
+    color: #222;
 }
 .container .logo a{
-    background-color: rgba(0,0,0,0);
+    background-color: #eee;
 }
 .container .logo a{
     float: left;
@@ -160,7 +161,7 @@ body{
     left: 0;
     z-index: 2;
     padding-top: 10px;
-    background-color: #EEEEEE;
+    background-color: #ccc;
     width: 220px;
     max-width: 220px;
     overflow: auto;
@@ -476,13 +477,13 @@ table th, table td {
     font-size: 24px;
 }
 .x-admin-sm .left-nav #nav li a cite{
-    font-size: 12px;
+    font-size: 16px;
 }
 .x-admin-sm .iconfont{
-    font-size: 14px;
+    font-size: 20px;
 }
 .x-admin-sm .layui-tab-title li{
-    font-size: 12px;
+    font-size: 14px;
 }
 .x-admin-sm .layui-icon{
     font-size: 14px;
