--- a/src/main/resources/templates/admin/my-desktop.html
+++ b/src/main/resources/templates/admin/my-desktop.html
@@ -23,14 +23,14 @@
                     <div class="layui-card">
                         <div class="layui-card-body ">
                             <blockquote class="layui-elem-quote">欢迎管理员：
-                                <span class="x-red">test</span>！当前时间:2018-04-25 20:50:53
+                                <span class="x-red">[[${username}]] </span>！当前时间:[[${nowDate}]]
                             </blockquote>
                         </div>
                     </div>
                 </div>
                 <div class="layui-col-md12">
                     <div class="layui-card">
-                        <div class="layui-card-header">数据统计</div>
+                        <div class="layui-card-header">系统概述</div>
                         <div class="layui-card-body ">
                             <ul class="layui-row layui-col-space10 layui-this x-admin-carousel x-admin-backlog">
                                 <li class="layui-col-md2 layui-col-xs6">
@@ -42,37 +42,23 @@
                                 </li>
                                 <li class="layui-col-md2 layui-col-xs6">
                                     <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>会员数</h3>
+                                        <h3>留言数</h3>
                                         <p>
                                             <cite>12</cite></p>
                                     </a>
                                 </li>
                                 <li class="layui-col-md2 layui-col-xs6">
                                     <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>回复数</h3>
+                                        <h3>上传附件数</h3>
                                         <p>
                                             <cite>99</cite></p>
                                     </a>
                                 </li>
                                 <li class="layui-col-md2 layui-col-xs6">
                                     <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>商品数</h3>
+                                        <h3>友链数</h3>
                                         <p>
                                             <cite>67</cite></p>
-                                    </a>
-                                </li>
-                                <li class="layui-col-md2 layui-col-xs6">
-                                    <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>文章数</h3>
-                                        <p>
-                                            <cite>67</cite></p>
-                                    </a>
-                                </li>
-                                <li class="layui-col-md2 layui-col-xs6 ">
-                                    <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>文章数</h3>
-                                        <p>
-                                            <cite>6766</cite></p>
                                     </a>
                                 </li>
                             </ul>
@@ -81,8 +67,8 @@
                 </div>
                 <div class="layui-col-sm6 layui-col-md3">
                     <div class="layui-card">
-                        <div class="layui-card-header">下载
-                            <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span></div>
+                        <div class="layui-card-header">最近文章
+                            </div>
                         <div class="layui-card-body  ">
                             <p class="layuiadmin-big-font">33,555</p>
                             <p>新下载
@@ -94,8 +80,8 @@
                 </div>
                 <div class="layui-col-sm6 layui-col-md3">
                     <div class="layui-card">
-                        <div class="layui-card-header">下载
-                            <span class="layui-badge layui-bg-cyan layuiadmin-badge">月</span></div>
+                        <div class="layui-card-header">最近留言
+                            </div>
                         <div class="layui-card-body ">
                             <p class="layuiadmin-big-font">33,555</p>
                             <p>新下载
