--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -58,22 +58,28 @@
                 <ul id="nav">
                     <li>
                         <a onclick="xadmin.add_tab('发布文章','/admin/article/publish')">
-                            <i class="iconfont left-nav-li" lay-tips="订单管理">&#xe632;</i>
+                            <i class="iconfont left-nav-li" lay-tips="发布文章">&#xe632;</i>
                             <cite>发布文章</cite>
                             </a>
                     </li>
 
                     <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="分类管理">&#xe850;</i>
+                        <a onclick="xadmin.add_tab('文章管理','/admin/article/management')">
+                            <i class="iconfont left-nav-li" lay-tips="文章管理">&#xe850;</i>
                             <cite>文章管理</cite>
                             </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="城市联动">&#xe6bf;</i>
+                        <a onclick="xadmin.add_tab('评论管理','/admin/comment/index')">
+                            <i class="iconfont left-nav-li" lay-tips="评论管理">&#xe6bf;</i>
                             <cite>评论管理</cite>
                             </a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('分类/标签','/admin/category/index')">
+                            <i class="iconfont left-nav-li" lay-tips="分类/标签">&#xe81c;</i>
+                            <cite>分类/标签</cite>
+                        </a>
                     </li>
                     <li>
                         <a href="javascript:;">
