--- a/src/main/resources/templates/admin/comment-management.html
+++ b/src/main/resources/templates/admin/comment-management.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm" xmlns:th="http://www.tymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>用户管理</title>
+        <title>文章管理</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -18,10 +18,8 @@
     <body>
         <div class="x-nav">
           <span class="layui-breadcrumb">
-            <a href="">首页</a>
-            <a href="">演示</a>
             <a>
-              <cite>导航元素</cite></a>
+              <cite>文章管理</cite></a>
           </span>
           <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
             <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
@@ -30,46 +28,38 @@
             <div class="layui-row layui-col-space15">
                 <div class="layui-col-md12">
                     <div class="layui-card">
-                        <div class="layui-card-body ">
-                            <form class="layui-form layui-col-space5">
-                                <div class="layui-inline layui-show-xs-block">
-                                    <input class="layui-input"  autocomplete="off" placeholder="开始日" name="start" id="start">
-                                </div>
-                                <div class="layui-inline layui-show-xs-block">
-                                    <input class="layui-input"  autocomplete="off" placeholder="截止日" name="end" id="end">
-                                </div>
-                                <div class="layui-inline layui-show-xs-block">
-                                    <input type="text" name="username"  placeholder="请输入用户名" autocomplete="off" class="layui-input">
-                                </div>
-                                <div class="layui-inline layui-show-xs-block">
-                                    <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="layui-card-header">
-                            <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-                            <button class="layui-btn" onclick="xadmin.open('添加用户','./member-add.html',600,400)"><i class="layui-icon"></i>添加</button>
-                        </div>
                         <div class="layui-card-body layui-table-body layui-table-main">
                             <table class="layui-table layui-form">
                                 <thead>
                                   <tr>
-                                    <th>
-                                      <input type="checkbox" lay-filter="checkall" name="" lay-skin="primary">
-                                    </th>
-                                    <th>ID</th>
-                                    <th>用户名</th>
-                                    <th>性别</th>
-                                    <th>手机</th>
-                                    <th>地址</th>
-                                    <th>状态</th>
-                                    <th>操作</th></tr>
+                                    <th >评论内容</th>
+                                    <th width="10%">评论人</th>
+                                    <th>评论时间</th>
+                                    <th>评论人邮箱</th>
+                                    <th>评论人网址</th>
+                                    <th width="8%">评论状态</th>
+                                    <th width="5%">操作</th></tr>
                                 </thead>
                                 <tbody>
                                   <tr>
-                                    <td>
-                                      <input type="checkbox" name="id" value="1"   lay-skin="primary"> 
+                                    <td>1</td>
+                                    <td>小明</td>
+                                    <td>男</td>
+                                    <td>13000000000</td>
+                                    <td>北京市 海淀区</td>
+                                    <td class="td-status">
+                                      <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
+                                    <td class="td-manage">
+                                      <a title="通过"  onclick="xadmin.open('通过','member-edit.html',600,400)" href="javascript:;">
+                                        <i class="layui-icon">&#xe642;</i>
+                                      </a>
+                                      <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
+                                        <i class="layui-icon">&#xe640;</i>
+                                      </a>
                                     </td>
+                                  </tr>
+                                  <tr>
+
                                     <td>1</td>
                                     <td>小明</td>
                                     <td>男</td>
@@ -93,9 +83,7 @@
                                     </td>
                                   </tr>
                                   <tr>
-                                    <td>
-                                      <input type="checkbox" name="id"  value="2" lay-skin="primary">
-                                    </td>
+
                                     <td>1</td>
                                     <td>小明</td>
                                     <td>男</td>
@@ -119,9 +107,7 @@
                                     </td>
                                   </tr>
                                   <tr>
-                                    <td>
-                                      <input type="checkbox" name="id" value="3"  lay-skin="primary">
-                                    </td>
+
                                     <td>1</td>
                                     <td>小明</td>
                                     <td>男</td>
@@ -145,9 +131,7 @@
                                     </td>
                                   </tr>
                                   <tr>
-                                    <td>
-                                      <input type="checkbox" name="id" value="4"  lay-skin="primary">
-                                    </td>
+
                                     <td>1</td>
                                     <td>小明</td>
                                     <td>男</td>
@@ -171,35 +155,7 @@
                                     </td>
                                   </tr>
                                   <tr>
-                                    <td>
-                                      <input type="checkbox" name="id" value="5"  lay-skin="primary">
-                                    </td>
-                                    <td>1</td>
-                                    <td>小明</td>
-                                    <td>男</td>
-                                    <td>13000000000</td>
-                                    <td>北京市 海淀区</td>
-                                    <td class="td-status">
-                                      <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-                                    <td class="td-manage">
-                                      <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                                        <i class="layui-icon">&#xe601;</i>
-                                      </a>
-                                      <a title="编辑"  onclick="xadmin.open('编辑','member-edit.html',600,400)" href="javascript:;">
-                                        <i class="layui-icon">&#xe642;</i>
-                                      </a>
-                                      <a onclick="xadmin.open('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                                        <i class="layui-icon">&#xe631;</i>
-                                      </a>
-                                      <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                                        <i class="layui-icon">&#xe640;</i>
-                                      </a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td>
-                                     <input type="checkbox" name="id" value="6" lay-skin="primary">
-                                    </td>
+
                                     <td>1</td>
                                     <td>小明</td>
                                     <td>男</td>
