我的桌面系统日志出不来

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -88,8 +88,8 @@
                             </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="系统统计">&#xe683;</i>
+                        <a onclick="xadmin.add_tab('友链管理','/admin/links/index')">
+                            <i class="iconfont left-nav-li" lay-tips="友链管理">&#xe683;</i>
                             <cite>友链管理</cite>
                             </a>
 
