--- a/src/main/resources/templates/admin/article-management.html
+++ b/src/main/resources/templates/admin/article-management.html
@@ -41,7 +41,7 @@
                                     <th>操作</th></tr>
                                 </thead>
                                 <tbody>
-                                <th:block th:each="post :${byCond.list}">
+                                <th:block th:each="post :${articles.list}">
                                   <tr>
                                     <td>[[${post.title}]]</td>
                                     <td>
